<resources>
    <string name="app_name">Outdoors</string>

    <string name="signUpText">Don\'t have an account?</string>
    <string name="logInText">Log In</string>
    <string name="logInGoogleText">Log In with Google</string>

    <string name="emailEditHint">E-Mail address</string>
    <string name="usernameEditHint">Username</string>
    <string name="passwordEditHint">Password</string>
    <string name="passwordConfirmEditHint">Confirm Password</string>

    <string name="signUpSubmit">Sign Up</string>
    <string name="signUpFNameEdit">First Name</string>
    <string name="signUpLNameEdit">Last Name</string>
    <string name="signUpPhoneEdit">Phone Number</string>

    <string name="addFriend">Add As Friend</string>

    <string name="OK">OK</string>

    <string name="acceptBTReq">Accept</string>
    <string name="cancel">Cancel</string>

    <string name="navMap">Map</string>
    <string name="navProfile">Profile</string>
    <string name="navFriends">Friends</string>
    <string name="navPlaces">My Places</string>
    <string name="navRoutes">My Routes</string>
    <string name="navSched">Schedule</string>
    <string name="navLeaderboard">Leaderboard</string>
    <string name="navInvites">Invites</string>
    <string name="navSettings">Settings</string>
    <string name="navLogOut">Log Out</string>

    <string name="navDrawerOpen">Open navigation drawer</string>
    <string name="navDrawerClose">Close navigation drawer</string>

    <string name="descTWPOI">Description:</string>
    <string name="submit">Submit</string>
</resources>