<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/prevbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/signUpSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpSubmit"
        app:layout_constraintBottom_toTopOf="@+id/prevbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <EditText
        android:id="@+id/signUpFirstNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signUpFNameEdit"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/signUpSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/signUpLastNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signUpLNameEdit"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/signUpSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpFirstNameEdit"
        app:layout_constraintVertical_bias="0.17000002" />

    <EditText
        android:id="@+id/signUpPhoneEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signUpPhoneEdit"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/signUpSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastNameEdit"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/signUpFirstNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="25dp"
        android:textColor="#f68876"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/signUpLastNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpFirstNameEdit" />

    <TextView
        android:id="@+id/signUpLastNameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="26dp"
        android:textColor="#f68876"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/signUpPhoneEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpLastNameEdit" />

    <TextView
        android:id="@+id/signUpPhoneError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="102dp"
        android:textColor="#f68876"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/signUpSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneEdit"
        app:layout_constraintVertical_bias="0.19" />
</androidx.constraintlayout.widget.ConstraintLayout>